[project]
name = "agent-ai-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.138.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]
